# swift-rs-core

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
dashboard/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: Header.tsx  LatencyMetrics.tsx  PaymentFlows.tsx  RiskScoring.tsx  SystemStatus.tsx
k8s/: deployment.yaml
swift-rs-ai/: Cargo.toml
swift-rs-ai/src/: fraud.rs  lib.rs  mapping.rs  models.rs
swift-rs-connector/: Cargo.toml
swift-rs-connector/src/: error.rs  lib.rs  protocols.rs  tls.rs
swift-rs-core/: Cargo.toml
swift-rs-core/src/: domain.rs  error.rs  lib.rs  validation.rs
swift-rs-cqrs/: Cargo.toml
swift-rs-cqrs/src/: aggregate.rs  command.rs  event.rs  event_store.rs  lib.rs
swift-rs-gateway/: Cargo.toml
swift-rs-gateway/src/: handlers.rs  main.rs  state.rs
swift-rs-iso20022/: Cargo.toml
swift-rs-iso20022/src/: lib.rs  models.rs  parser.rs  serializer.rs
