[package]
name = "swift-rs-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace deps
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# ort = { workspace = true }
# candle-core = { workspace = true }

# Internal deps
swift-rs-core = { path = "../swift-rs-core" }
