[package]
name = "swift-rs-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "swift-rs-gateway"
path = "src/main.rs"

[dependencies]
# Workspace deps
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal deps
swift-rs-core = { path = "../swift-rs-core" }
swift-rs-iso20022 = { path = "../swift-rs-iso20022" }
swift-rs-connector = { path = "../swift-rs-connector" }
swift-rs-cqrs = { path = "../swift-rs-cqrs" }
