[package]
name = "swift-rs-iso20022"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ISO 20022 message parsing and serialization for SWIFT financial messages"

[dependencies]
# Workspace deps
serde = { workspace = true }
serde-xml-rs = "0.8.2"
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

# Internal deps
swift-rs-core = { version = "0.1.0", path = "../swift-rs-core" }
